# hermx-trader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW_REPORT.md  DEVIN_TRANSITION_PLAN.md  DEVIN_TRANSITION_PROMPT.md  Dockerfile  FLAGS_AUDIT.md  FLAGS_FLUFF_AUDIT.md  INSTALL.md  KAJINX_PRICING_STRATEGY.md  KAJINX_VS_TRADERPOST.md  README.md  REFACTOR_PLAN.md  SETUP.md  closed-trades.jsonl  docker-compose.host.yml  docker-compose.yml  engine-config.json  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-security.txt  requirements.txt  run.sh  run_install.md  shadow-config.json.bak.20260626T033745Z  verify_install.sh
.claude/: CLAUDE.md
config/: runtime.binance.demo.json  runtime.bitfinex.demo.json  runtime.bitget.demo.json  runtime.bybit.demo.json  runtime.coinbase.demo.json  runtime.demo.json  runtime.gate.demo.json  runtime.hyperliquid.demo.json  runtime.kucoin.demo.json  runtime.live.example.json
dashboard-ui/: .env.local  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
deploy/: deploy.sh  hermx-dashboard.service  hermx-receiver.service  install-cron-monitors.sh  install-services.sh
docs/: 1-STRATEGIES.md  2-TRADINGVIEW_EXECUTION.md  3-TRADINGVIEW_ALERTS.md  4-STRATEGY_BUDGET_MODEL.md  5-DASHBOARD_MODEL.md  6-CCXT_EXCH_ADAPTER.md  7-EXECUTION_MONITORING.md  8-HERMES_AGENT_DESIGN.md  ALERT_CONTRACT.md  BUDGET_MODEL.md  CCXT_VENUE_NEUTRALITY_VALIDATION.md  DASHBOARD_MODEL.md  DOCKER_PACKAGE.md  DOCKER_PACKAGE_PLAN.md  DOC_AUDIT_REPORT.md  EXCHANGE_ADAPTERS.md  EXECUTION_GATES.md  EXECUTION_RULES.md  EXECUTION_STRATEGY_DESIGN.md  HEALTH_AND_RECOVERY.md  HERMES_AGENT_DESIGN.md  HERMES_CRON_MONITOR_DESIGN.md  (+30 more)
(+306 files in other folders)
